--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -135,6 +135,7 @@
     <div class="row-fluid">
       <div class="span3 box-border social">
         <div class="row-fluid">
+          <h2>Wanna be social?</h2>
         </div>
         <div class="row-fluid">&nbsp;</div>
 
