--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
                   <div class="input-append">
                     <!--<input id="signup" class="span8" type="text" placeholder="Your email" name="signup">-->
                     <!--<a href="#" class="btn magenta">Submit</a>-->
-               <div class="fb-like" data-href="http://www.facebook.com/pages/Talkycloud/209382865871186" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true" data-font="tahoma"></div>
+                    <div class="fb-like" data-href="http://www.facebook.com/pages/Talkycloud/209382865871186" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true" data-font="tahoma"></div>
 
                   </div>
                 </div>
@@ -207,5 +207,6 @@
   <%= yield %>
 
 </div>
+<%= javascript_include_tag "click" %>
 </body>
 </html>
