--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" href="/assets/favicon.ico">
+
   <meta charset="utf-8">
   <!-- Always force latest IE rendering engine or request Chrome Frame -->
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -29,19 +31,22 @@
   <%= csrf_meta_tags %>
   <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-38636227-1']);
-  _gaq.push(['_setDomainName', 'talkycloud.com']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-38636227-1']);
+      _gaq.push(['_setDomainName', 'talkycloud.com']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+          var ga = document.createElement('script');
+          ga.type = 'text/javascript';
+          ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-<meta name='yandex-verification' content='79ee0685e1c46577' />
+  </script>
+  <meta name='yandex-verification' content='79ee0685e1c46577'/>
 </head>
 
 <body>
@@ -68,7 +73,8 @@
     <div class="row-fluid">
       <div class="span6">
         <div class="row-fluid">
-          <div class="span10">
+          <div class="span10" style="top: -44px;
+                                     position: relative;">
             <img class="hero-image" src="/assets/hero-image.png" alt="Hero Image"/>
           </div>
           <div class="span2">&nbsp;</div>
