--- a/app/views/widgets/demo.html.erb
+++ b/app/views/widgets/demo.html.erb
@@ -226,7 +226,7 @@
 
                             <div class="article-actions">
                               <%= link_to "Edit", edit_comment_path(comment.id), :remote => true %>  -
-                              <%= link_to "Remove", edit_comment_path(comment.id), :remote => true %>
+                              <%= link_to "Remove", comment_path(comment.id), :remote => true, :method => :delete, :confirm => "Are you sure?" %>
                             </div>
                           </div>
                         </li>
