New helpers added -Widget crud added

--- a/app/views/admin/account/show.html.erb
+++ b/app/views/admin/account/show.html.erb
@@ -3,7 +3,7 @@
     <div class="span12">
       <div class="box bordered">
         <div class="box-header">
-          <i class="icon-th-list"></i> My Account
+          <i class="icon-user"></i> My Account
           <div class="pull-right">
             <div class="btn-group">
               <a class="dropdown-toggle" data-toggle="dropdown">
@@ -42,7 +42,7 @@
                       <%= link_to "Cancel", admin_path %>
                     </div>
 
-                    <%#= render :partial => 'shared/social' %>
+                    <%= render :partial => 'shared/social' %>
 
                 <% end %>
 
