--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -6,7 +6,7 @@
   <ul class="top-notifications">
     <li>
       <a href="#messages" class="accordion-toggle" data-toggle="collapse" data-parent="#top-acc">
-        Messages <span class="badge dark-blue">3</span>
+         Comments Waiting <span class="badge dark-blue">3</span>
       </a>
 
       <div class="collapsed" style="height: 0; overflow: visible;">
@@ -19,18 +19,19 @@
       </div>
     </li>
 
-    <li>
-      <a href="#orders" class="accordion-toggle" data-toggle="collapse" data-parent="#top-acc">
-        Orders <span class="badge dark-plum">45</span>
-      </a>
+    <!--<li>-->
+      <!--<a href="#orders" class="accordion-toggle" data-toggle="collapse" data-parent="#top-acc">-->
+        <!--Orders <span class="badge dark-plum">45</span>-->
+      <!--</a>-->
 
-      <div class="collapsed" style="height: 0; overflow: visible;">
-        <ul id="orders" class="collapse top-bar-list">
-          <li><a href="#">New orders <span class="count">(34)</span></a></li>
-          <li><a href="#">Refunds</a></li>
-          <li><a href="#">History</a></li>
-        </ul>
-      </div>
-    </li>
+      <!--<div class="collapsed" style="height: 0; overflow: visible;">-->
+        <!--<ul id="orders" class="collapse top-bar-list">-->
+          <!--<li><a href="#">New orders <span class="count">(34)</span></a></li>-->
+          <!--<li><a href="#">Refunds</a></li>-->
+          <!--<li><a href="#">History</a></li>-->
+        <!--</ul>-->
+      <!--</div>-->
+    <!--</li>-->
+
   </ul>
 </div>
