--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,7 +58,7 @@
                 <div class="input-append">
                   <!--<input id="signup" class="span8" type="text" placeholder="Your email" name="signup">-->
                   <!--<a href="#" class="btn magenta">Submit</a>-->
-                  <div class="fb-like" data-href="http://www.facebook.com/pages/Talkycloud/209382865871186" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true" data-font="tahoma"></div>
+                  <div class="fb-like" data-href="http://www.facebook.com/TalkyCloud" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true" data-font="tahoma"></div>
 
                 </div>
               </div>
@@ -95,10 +95,10 @@
 
       <div class="row-fluid">
         <div class="span4">
-          <a href="http://twitter.com/ycbacakoglu" class="social-icon twitter" target="_blank"><i>&nbsp;</i></a>
+          <a href="http://twitter.com/TalkyCloud" class="social-icon twitter" target="_blank"><i>&nbsp;</i></a>
         </div>
         <div class="span4">
-          <a href="http://www.facebook.com/pages/Talkycloud/209382865871186" class="social-icon facebook" target="_blank"><i>&nbsp;</i></a>
+          <a href="http://www.facebook.com/TalkyCloud" class="social-icon facebook" target="_blank"><i>&nbsp;</i></a>
         </div>
         <div class="span4">
           <a href="http://www.linkedin.com/pub/yigitcan-bacakoglu/51/1a8/790" class="social-icon linkedin" target="_blank"><i>&nbsp;</i></a>
