--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -55,10 +55,10 @@
 
 <div id="domainPortfolio">
   <ul>
-    <li><a href="#">PireGibi.com</a></li>
-    <li><a href="#">TalkyCloud.com</a></li>
-    <li><a href="#">TatilKiyasla.net</a></li>
-    <li><a href="#">TatilPlanim.net</a></li>
+    <li><a href="//piregibi.com">PireGibi.com</a></li>
+    <li><a href="//talkycloud.com">TalkyCloud.com</a></li>
+    <li><a href="//tatilkiyasla.net">TatilKiyasla.net</a></li>
+    <li><a href="//tatilplanim.net">TatilPlanim.net</a></li>
   </ul>
 </div>
 <!-- end #domainPortfolio -->
@@ -110,7 +110,8 @@
     <h2>My Domain Updates</h2>
 
     <div class="section" id="twistter">
-      <a href="http://twitter.com/ycbacakoglu" title="Domain Tweets" class="button"><img src="/assets/blogs/icons/twitter.gif" alt="send"/>Follow me on Twitter</a>
+      <a href="http://twitter.com/ycbacakoglu" title="Domain Tweets" class="button"><img src="/assets/blogs/icons/twitter.gif" alt="send"/>Follow
+        me on Twitter</a>
 
       <noscript>
         <p>
@@ -122,37 +123,37 @@
     <!-- end .section -->
     <script>
 
-//        new TWTR.Widget({
-//            version: 2,
-//            type: 'search',
-//            search: 'tinagold',
-//            interval: 6000,
-//            title: 'Twitter &quot;tina gold&quot; Search Results',
-//            subject: 'tina gold',
-//            width: 487,
-//            height: 118,
-//            theme: {
-//                shell: {
-//                    background: '#8ec1da',
-//                    color: '#ffffff'
-//                },
-//                tweets: {
-//                    background: '#ffffff',
-//                    color: '#444444',
-//                    links: '#1985b5'
-//                }
-//            },
-//            features: {
-//                scrollbar: false,
-//                loop: true,
-//                live: true,
-//                hashtags: true,
-//                timestamp: true,
-//                avatars: true,
-//                behavior: 'default'
-//            }
-//        }).render().start();
-//
+        //        new TWTR.Widget({
+        //            version: 2,
+        //            type: 'search',
+        //            search: 'tinagold',
+        //            interval: 6000,
+        //            title: 'Twitter &quot;tina gold&quot; Search Results',
+        //            subject: 'tina gold',
+        //            width: 487,
+        //            height: 118,
+        //            theme: {
+        //                shell: {
+        //                    background: '#8ec1da',
+        //                    color: '#ffffff'
+        //                },
+        //                tweets: {
+        //                    background: '#ffffff',
+        //                    color: '#444444',
+        //                    links: '#1985b5'
+        //                }
+        //            },
+        //            features: {
+        //                scrollbar: false,
+        //                loop: true,
+        //                live: true,
+        //                hashtags: true,
+        //                timestamp: true,
+        //                avatars: true,
+        //                behavior: 'default'
+        //            }
+        //        }).render().start();
+        //
     </script>
     <div id="footer" class="section">
       <p>&copy; 2013 YCB
