--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
   <title>TalkyCloud</title>
   <meta charset="UTF-8"/>
   <meta name="description" content="TalkyCloud is a FREE global comment system that improves discussion on websites and connects conversations across the web.
-"/>
-  <meta name="keywords" content="comment, rating, widget, free commenting widget, comments, blog, blogs, yorum, plugin, eklenti "/>
+    You can signup for free online commenting rating widget and you will get a piece of code that will turn your website into an online community and rating platform"/>
+  <meta name="keywords" content="comment, rating, widget, free commenting widget, comments, blog, blogs, yorum, plugin, eklenti, commenting, discussion, webpage, html,
+   website, comment on website, online community"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <!-- Scripts -->
