--- a/app/views/user_passwords/new.html.erb
+++ b/app/views/user_passwords/new.html.erb
@@ -9,7 +9,7 @@
             <ul class="fields-list">
               <li>
                 <i class="icon-user" style="float: left;"></i>
-                <%= f.email_field :email, :autocomplete => "off", :id => "username", :placeholder => "Email" %>
+                <%= f.email_field :login, :autocomplete => "off", :id => "username", :placeholder => "Email or Username" %>
               </li>
             </ul>
 
