--- a/app/views/user_registrations/new.html.erb
+++ b/app/views/user_registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => "shared/errors", :locals => {:target => resource} %>
+
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span12">
@@ -9,6 +11,11 @@
 
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'login-form'}) do |f| %>
                 <ul class="fields-list">
+                  <li>
+                    <i class="icon-user" style="float: left;"></i>
+                    <%= f.text_field :username, :autocomplete => "off", :autofocus => true, :placeholder => "Username" %>
+                  </li>
+
                   <li>
                     <i class="icon-user" style="float: left;"></i>
                     <%= f.email_field :email, :autocomplete => "off", :id => "username", :placeholder => "Email" %>
