--- a/app/views/widgets/demo.html.erb
+++ b/app/views/widgets/demo.html.erb
@@ -24,7 +24,9 @@
                   <%= @success[1] if @success && @success[0] == @post %>
                 </div>
               </div>
-              <%= comment_form(@comment, comment_posts_url) %>
+              <div id="comment-form-container">
+                <%= comment_form(@comment, comment_posts_url) %>
+              </div>
             </div>
             <div class="padded10">
               <ul class="recent-comments" id="comment_container">
@@ -62,9 +64,9 @@
                     <% end %>
 
                 <% end %>
-                <li class="comment-box view-more" style="text-align: center">
-                  <%#= link_to_next_page @comments, 'View More', :remote => true %>
-                </li>
+                <!--<li class="comment-box view-more" style="text-align: center">-->
+                <!--<%#= link_to_next_page @comments, 'View More', :remote => true %>-->
+                <!--</li>-->
               </ul>
               <%= link_to "#{image_tag 'hero-image.png', :style => 'width:75px;height:50px;'}".html_safe, "//talkycloud.com" %>
             </div>
@@ -74,5 +76,4 @@
     </div>
   </div>
 </div>
-
 
