--- a/app/assets/stylesheets/widget.css
+++ b/app/assets/stylesheets/widget.css
@@ -11,6 +11,8 @@
     -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
+    min-width: 494px !important;
+
 }
 
 .box {
@@ -109,7 +111,7 @@ ol, ul {
 /*}*/
 
 .recent-comments .comment-box {
-    min-height: 110px;
+    min-height: 75px;
     background: #fff;
     padding: 10px;
     border: 1px solid #eeeeee;
@@ -135,9 +137,13 @@ ol, ul {
     /*background-image: url('/assets/avatar.png');*/
 /*}*/
 
+
+.article-actions {
+    margin-top: 10px;
+}
 .recent-comments .comment-box .avatar {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
@@ -152,7 +158,7 @@ ol, ul {
 }
 
 .recent-comments .comment-box .article {
-    margin-left: 100px;
+    margin-left: 65px;
 }
 
 .recent-comments .comment-box .article .post-info {
