--- a/app/views/widgets/demo.html.erb
+++ b/app/views/widgets/demo.html.erb
@@ -13,13 +13,13 @@
     <div class="span12">
       <div class="row-fluid">
         <div class="span12">
-          <div class="box bordered">
+          <div class="box bordered box-container">
             <div class="box-header">
               <section id="main">
                 <%= render :partial => "shared/flashes" %>
 
               </section>
-              <i class="icon-comments"></i> Widget Name
+              <i class="icon-comments"></i> <%= @current_widget.try(:store).try(:name) %>
               <div class="pull-right">
                 <%= rating_for(@post, :url => rate_posts_path) %>
                 <div class="post-error">
