--- a/app/views/admin/widgets/_form.html.erb
+++ b/app/views/admin/widgets/_form.html.erb
@@ -11,6 +11,10 @@
         <div class="input full-width">
           <%= f.text_field :category_id, :placeholder => 'Category' %>
         </div>
+        <div class="well" style="display: none;">
+
+        </div>
+
       </div>
     </div>
   </div>
