--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -132,35 +132,10 @@
     </div>
     <div>
 
-      <script id="talky-script">
-          $(function () {
-              setTimeout(function () {
-                  var like = document.createElement('iframe');
-                  <% if Rails.env.development? %>
-                  like.src = "//localhost:3000/demo?k=123&u=" + window.location.hostname + "&p=" + window.location.pathname + "";
-
-                  <% else %>
-                  like.src = "//talkycloud.com/demo?k=123&u=" + window.location.hostname + "&p=" + window.location.pathname + "";
-
-                  <% end %>
-//    like.scrolling = 'no';
-                  like.frameBorder = 0;
-                  like.id = "talky-frame";
-                  like.allowTransparency = 'true';
-                  like.style.border = 0;
-                  like.style.cursor = 'pointer';
-                  like.style.width = '550px';
-                  like.style.position = 'absolute';
-                  var this_script = document.getElementById("talky-script");
-                  this_script.parentNode.insertBefore(like, this_script);
-              }, 500);
-          });
-
-          resize = function (h) {
-              document.getElementById('talky-frame').style.height = h + "px";
-
-          }
+      <script type="text/javascript">
+          talkyCostumerKey='7fe82a6e9b39c453657a9f7818310a'
       </script>
+      <script src="//localhost:3000/assets/embed.js" id="talky-script"></script>
     </div>
 
 
