--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'/>
   <%= javascript_include_tag "jquery" %>
   <%= javascript_include_tag "jquery_ujs" %>
+  <%= javascript_include_tag "easyXDM.min" %>
+  <%= javascript_include_tag "easyXDM.Widgets.min" %>
+
   <%= yield :head %>
   <%= csrf_meta_tags %>
   <script type="text/javascript">
