--- a/app/views/widgets/demo.html.erb
+++ b/app/views/widgets/demo.html.erb
@@ -58,7 +58,13 @@
     $(function () {
         var h = $('.wrapper').css('height');
         h = parseInt(h) + 20
-        parent.resize(h);
-    })
+
+        var socket = new easyXDM.Socket({
+            onMessage: function (message, origin) {
+                socket.postMessage(h);
+            }
+        });
+    });
+
 
 </script>
